Bad unit component shows bad units
