# Cookta-online/src/app/shared/routes.ts
@@ -28,6 +28,7 @@ export class Routes {
 
   public static readonly Unit = {
     GetAll: "/unit",
+    GetBads: "/unit/bad-units"
   };
 
   public static readonly Tag = {
